--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,10 @@
 .vs/W04/v16/Browse.VC.db-shm
 .vs/W04/v16/Browse.VC.db-wal
 .vs/W04/v16/Browse.VC.opendb
+.vs/LabLinkedList/v16/Browse.VC.db-shm
+.vs/LabLinkedList/v16/Browse.VC.db-wal
+.vs/LabLinkedList/v16/Browse.VC.opendb
+x64/Debug/LabLinkedList.tlog/CL.command.1.tlog
+x64/Debug/LabLinkedList.tlog/LabLinkedList.lastbuildstate
+x64/Debug/LabLinkedList.tlog/unsuccessfulbuild
+x64/Debug/vc142.idb
